src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F401_F401_7.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    UnusedImport:
      - typing.Union
      - false
      - false
  location:
    row: 30
    column: 4
  end_location:
    row: 30
    column: 9
  fix:
    content:
      - from typing import (
      - "    Mapping,  # noqa: F401"
      - "    )"
    location:
      row: 28
      column: 0
    end_location:
      row: 31
      column: 1
  parent:
    row: 28
    column: 0
- kind:
    UnusedImport:
      - typing.Awaitable
      - false
      - true
  location:
    row: 66
    column: 19
  end_location:
    row: 66
    column: 28
  fix:
    content:
      - ""
    location:
      row: 66
      column: 0
    end_location:
      row: 67
      column: 0
  parent: ~
- kind:
    UnusedImport:
      - typing.AwaitableGenerator
      - false
      - true
  location:
    row: 66
    column: 30
  end_location:
    row: 66
    column: 48
  fix:
    content:
      - ""
    location:
      row: 66
      column: 0
    end_location:
      row: 67
      column: 0
  parent: ~

