src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F403_F403.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    ImportStarUsed: F634
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 18
  fix: ~
  parent: ~
- kind:
    ImportStarUsed: F634
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 18
  fix: ~
  parent: ~

