src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F407_F407.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    FutureFeatureNotDefined: non_existent_feature
  location:
    row: 2
    column: 23
  end_location:
    row: 2
    column: 43
  fix: ~
  parent: ~

