src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F501_F50x.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    PercentFormatInvalidFormat: incomplete format
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 25
  fix: ~
  parent: ~

