src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F502_F502.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    PercentFormatExpectedMapping: ~
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 19
  fix: ~
  parent: ~
- kind:
    PercentFormatExpectedMapping: ~
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 20
  fix: ~
  parent: ~
- kind:
    PercentFormatExpectedMapping: ~
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 19
  fix: ~
  parent: ~
- kind:
    PercentFormatExpectedMapping: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 22
  fix: ~
  parent: ~
- kind:
    PercentFormatExpectedMapping: ~
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 37
  fix: ~
  parent: ~
- kind:
    PercentFormatExpectedMapping: ~
  location:
    row: 12
    column: 0
  end_location:
    row: 12
    column: 37
  fix: ~
  parent: ~
- kind:
    PercentFormatExpectedMapping: ~
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 37
  fix: ~
  parent: ~

