src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F502_F50x.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    PercentFormatExpectedMapping: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 21
  fix: ~
  parent: ~

